# gridpeek

./: Cargo.toml  LICENSE  README.md  build.rs  dataview.desktop
.github/workflows/: ci.yml  release.yml
src/: app.rs  main.rs  search.rs  viewer.rs
src/loader/: csv_loader.rs  excel_loader.rs  mod.rs
